--- a/apps/support/openwisp/overlays/homelab/kustomization.yaml
+++ b/apps/support/openwisp/overlays/homelab/kustomization.yaml
@@ -5,5 +5,5 @@ resources:
   - ../../base
   - ingress.yaml
 
-patches:
-  - path: timeseries-fix.yaml
+patchesStrategicMerge:
+  - timeseries-fix.yaml
