--- a/apps/support/openwisp/base/influxdb-pvc.yaml
+++ b/apps/support/openwisp/base/influxdb-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: influxdb-data
+  name: openwisp-influxdb-data
 spec:
   accessModes:
     - ReadWriteOnce
