--- a/apps/support/openwisp/base/configmap.yaml
+++ b/apps/support/openwisp/base/configmap.yaml
@@ -35,3 +35,4 @@ data:
   USE_OPENWISP_CELERY: "true"
   USE_OPENWISP_CELERY_NETWORK: "true"
   USE_OPENWISP_CELERY_MONITORING: "true"
+  CELERY_BROKER_URL: "redis://openwisp-redis:6379/0"
