--- a/apps/support/openwisp/overlays/homelab/ingress.yaml
+++ b/apps/support/openwisp/overlays/homelab/ingress.yaml
@@ -10,10 +10,10 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts:
-        - openwisp-desktop.support4u.se
+        - openwisp-dashboard.support4u.se
       secretName: openwisp-dashboard-tls
   rules:
-    - host: openwisp-desktop.support4u.se
+    - host: openwisp-dashboard.support4u.se
       http:
         paths:
           - path: /
