--- a/apps/support/openwisp/base/configmap.yaml
+++ b/apps/support/openwisp/base/configmap.yaml
@@ -41,5 +41,5 @@ data:
   USE_OPENWISP_CELERY_NETWORK: "true"
   USE_OPENWISP_CELERY_FIRMWARE: "false"
   USE_OPENWISP_CELERY_MONITORING: "true"
-  OPENWISP_DASHBOARD_URL: "http://openwisp-dashboard:8000"
+  OPENWISP_DASHBOARD_URL: "http://openwisp-dashboard"
   CELERY_BROKER_URL: "redis://openwisp-redis:6379/0"
