--- a/apps/support/openwisp/base/kustomization.yaml
+++ b/apps/support/openwisp/base/kustomization.yaml
@@ -1,17 +1,37 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 namespace: openwisp
+
 resources:
   - namespace.yaml
-  - configmap.yaml
-  - secret.yaml
-  - postgres.yaml
-  - redis.yaml
-  - dashboard.yaml
-  - api.yaml
-  - celery.yaml
-  - celerybeat.yaml
-  - websocket.yaml
-  - influxdb-pvc.yaml
-  - influxdb-deployment.yaml
-  - influxdb-service.yaml
+  - config-openwisp-env.yaml
+  - secret-openwisp-secrets.yaml
+  - pvc-postgres.yaml
+  - pvc-influxdb.yaml
+  - pvc-redis.yaml
+  - pvc-openwisp-storage.yaml
+  - deployment-postgres.yaml
+  - service-postgres.yaml
+  - deployment-influxdb.yaml
+  - service-influxdb.yaml
+  - deployment-redis.yaml
+  - service-redis.yaml
+  - deployment-dashboard.yaml
+  - service-dashboard.yaml
+  - deployment-api.yaml
+  - service-api.yaml
+  - deployment-websocket.yaml
+  - service-websocket.yaml
+  - deployment-celery.yaml
+  - deployment-celery-monitoring.yaml
+  - deployment-celerybeat.yaml
+  - deployment-nginx.yaml
+  - service-nginx.yaml
+  - deployment-freeradius.yaml
+  - service-freeradius.yaml
+  - deployment-postfix.yaml
+  - service-postfix.yaml
+  - deployment-openvpn.yaml
+  - service-openvpn.yaml
+  - ingress-openwisp.yaml
