--- a/apps/support/openwisp/base/pvc-postgres.yaml
+++ b/apps/support/openwisp/base/pvc-postgres.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: openwisp-influxdb-data
+  name: postgres-data
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn
   resources:
     requests:
       storage: 10Gi
