fix: Add REDIS_HOST and REDIS_PORT to OpenWISP environment configuration

--- a/apps/support/openwisp/base/config-openwisp-env.yaml
+++ b/apps/support/openwisp/base/config-openwisp-env.yaml
@@ -50,3 +50,5 @@ data:
   OPENWISP_CELERY_FIRMWARE_COMMAND_FLAGS: "--concurrency=1"
   METRIC_COLLECTION: "True"
   COLLECTSTATIC_WHEN_DEPS_CHANGE: "true"
+  REDIS_HOST: "redis"
+  REDIS_PORT: "6379"
