--- a/apps/support/openwisp/overlays/homelab/kustomization.yaml
+++ b/apps/support/openwisp/overlays/homelab/kustomization.yaml
@@ -1,6 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: openwisp
+
 resources:
   - ../../base
+  - redis-config.yaml
+  - redis-pvc.yaml
 
+patches:
+  - path: redis-deployment-patch.yaml
+    target:
+      kind: Deployment
+      name: redis
