feat: Add Nginx configuration and deployment for OpenWISP

--- a/apps/support/openwisp/overlays/homelab/redis-config.yaml
+++ b/apps/support/openwisp/overlays/homelab/redis-config.yaml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: redis-config
+  namespace: openwisp
 data:
   redis.conf: |
-    save ""
-    appendonly no
-    stop-writes-on-bgsave-error no
+    appendonly yes
+    maxmemory 256mb
+    maxmemory-policy allkeys-lru
