--- a/apps/support/openwisp/overlays/homelab/kustomization.yaml
+++ b/apps/support/openwisp/overlays/homelab/kustomization.yaml
@@ -1,8 +1,6 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-
 resources:
-  - ../../base
+  - nginx-config.yaml
+  - nginx-deploy-patch.yaml
   - redis-config.yaml
 
 patches:
