--- a/apps/support/openwisp/overlays/homelab/kustomization.yaml
+++ b/apps/support/openwisp/overlays/homelab/kustomization.yaml
@@ -11,3 +11,13 @@ patches:
     target:
       kind: Deployment
       name: redis
+
+# patchesStrategicMerge converted to JSON6902-style patches
+patches:
+  - path: nginx-deploy-patch.yaml
+    target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: openwisp-nginx
+      namespace: openwisp
