--- a/apps/support/openwisp/overlays/homelab/kustomization.yaml
+++ b/apps/support/openwisp/overlays/homelab/kustomization.yaml
@@ -1,20 +1,6 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
 
 resources:
   - ../../base
-  - nginx-config.yaml
-  - redis-config.yaml
-
-patches:
-  - path: redis-deployment-patch.yaml
-    target:
-      kind: Deployment
-      name: redis
-  - path: nginx-deploy-patch.yaml
-    target:
-      group: apps
-      version: v1
-      kind: Deployment
-      name: openwisp-nginx
-      namespace: openwisp
+  - ingress-dashboard.yaml
+  - ingress-controller.yaml
+  - ingress-api.yaml
