--- a/apps/support/openwisp/base/kustomization.yaml
+++ b/apps/support/openwisp/base/kustomization.yaml
@@ -2,10 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - dashboard-svc.yaml
-  - dashboard-endpoints.yaml
-  - api-svc.yaml
-  - api-endpoints.yaml
-  - openvpn-svc.yaml
-  - openvpn-endpoints.yaml
+  - service.yaml
+  - endpoints.yaml
+  - namespace.yaml
   - ingress.yaml
+
