--- a/apps/support/openwisp/base/service.yaml
+++ b/apps/support/openwisp/base/service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: openwisp-external
+  namespace: openwisp
 spec:
   ports:
     - name: http
