--- a/apps/support/openwisp/base/endpoints.yaml
+++ b/apps/support/openwisp/base/endpoints.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: api
+  name: openwisp-endpoints
+  namespace: openwisp
 subsets:
   - addresses:
       - ip: 10.10.10.41
