--- a/apps/support/openwisp/base/ingress.yaml
+++ b/apps/support/openwisp/base/ingress.yaml
@@ -2,7 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: openwisp-ingress
+  namespace: openwisp
   annotations:
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-dns
 spec:
   ingressClassName: nginx
