--- a/apps/support/openwisp/base/ingress.yaml
+++ b/apps/support/openwisp/base/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: openwisp
   annotations:
     kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: letsencrypt-dns
 spec:
   ingressClassName: nginx
