--- a/apps/support/openwisp/base/endpoints.yaml
+++ b/apps/support/openwisp/base/endpoints.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: openwisp-endpoints
+  name: openwisp-service
   namespace: openwisp
 subsets:
   - addresses:
