refactor: Add Ingress configuration for rustdesk service

--- a/apps/support/rustdesk-server/overlays/homelab/kustomization.yaml
+++ b/apps/support/rustdesk-server/overlays/homelab/kustomization.yaml
@@ -3,5 +3,7 @@ kind: Kustomization
 namespace: rustdesk
 resources:
   - ../../base
+  - ingress-rustdesk.yaml
+  
 patches:
   - path: patch-service.yaml
