refactor: Remove unused argument from hbbs container in rustdesk deployment

--- a/apps/support/rustdesk-server/base/deployment.yaml
+++ b/apps/support/rustdesk-server/base/deployment.yaml
@@ -26,7 +26,8 @@ spec:
 
         - name: hbbs
           image: rustdesk/rustdesk-server:latest
-          args: ["hbbs","-k","_"]
+#          args: ["hbbs","-k","_"]
+          args: ["hbbs"]
           ports:
             - { name: rendezvous, containerPort: 21115, protocol: TCP }
             - { name: nat-tcp,   containerPort: 21116, protocol: TCP }
