refactor: Change externalTrafficPolicy to Cluster in rustdesk service configuration

--- a/apps/support/rustdesk-server/base/service.yaml
+++ b/apps/support/rustdesk-server/base/service.yaml
@@ -6,7 +6,7 @@ spec:
   type: LoadBalancer
   selector:
     app: rustdesk-server
-  externalTrafficPolicy: Local
+  externalTrafficPolicy: Cluster
   ports:
     - name: rendezvous
       port: 21115
