--- a/apps/support/rustdesk-server/overlays/homelab/kustomization.yaml
+++ b/apps/support/rustdesk-server/overlays/homelab/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ../../base
   - ingress-rustdesk.yaml
 
-patches:
-  - path: patch-service.yaml
+#patches:
+#  - path: patch-service.yaml
