--- a/apps/home-automation/frigate/base/deployment.yaml
+++ b/apps/home-automation/frigate/base/deployment.yaml
@@ -16,8 +16,6 @@ spec:
         - name: frigate
           image: ghcr.io/blakeblackshear/frigate:stable
           imagePullPolicy: IfNotPresent
-          securityContext:
-            privileged: true  # Required for GPU access
           ports:
             - containerPort: 5000  # UI/API
             - containerPort: 8554  # RTSP restream (optional)
@@ -25,8 +23,6 @@ spec:
           env:
             - name: FRIGATE_CONFIG_FILE
               value: /config/config.yaml
-            - name: LIBVA_DRIVER_NAME
-              value: i965  # Intel Quick Sync driver
           volumeMounts:
             - name: config
               mountPath: /config
@@ -36,15 +32,13 @@ spec:
               mountPath: /media/frigate
             - name: shm
               mountPath: /dev/shm
-            - name: dri
-              mountPath: /dev/dri  # Intel GPU device
           resources:
             requests:
-              cpu: "500m"
-              memory: "1Gi"
+              cpu: "1000m"  # Increased for CPU-based processing
+              memory: "2Gi"
             limits:
-              cpu: "2000m"
-              memory: "4Gi"
+              cpu: "4000m"
+              memory: "8Gi"
       volumes:
         - name: config
           persistentVolumeClaim:
@@ -58,7 +52,4 @@ spec:
         - name: shm
           emptyDir:
             medium: Memory
-            sizeLimit: 512Mi
-        - name: dri
-          hostPath:
-            path: /dev/dri  # Intel GPU device for hardware acceleration
+            sizeLimit: 1Gi  # Increased for CPU-based processing
