--- a/apps/system-tools/litellm/base/deployment.yaml
+++ b/apps/system-tools/litellm/base/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         - name: litellm
           image: ghcr.io/berriai/litellm:main-latest
           imagePullPolicy: IfNotPresent
+          args: ["--config", "/app/config/config.yaml", "--port", "4000", "--num_workers", "1"]
           ports:
             - name: http
               containerPort: 4000
@@ -40,14 +41,12 @@ spec:
               mountPath: /app/config
               readOnly: true
           readinessProbe:
-            httpGet:
-              path: /health
+            tcpSocket:
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
           livenessProbe:
-            httpGet:
-              path: /health
+            tcpSocket:
               port: http
             initialDelaySeconds: 20
             periodSeconds: 20
