--- a/apps/system-tools/litellm/base/deployment.yaml
+++ b/apps/system-tools/litellm/base/deployment.yaml
@@ -52,11 +52,11 @@ spec:
             periodSeconds: 20
           resources:
             requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 500m
+              cpu: 200m
               memory: 512Mi
+            limits:
+              cpu: 1000m
+              memory: 2Gi
       volumes:
         - name: config
           configMap:
