--- a/apps/system-tools/litellm/overlays/homelab/patch-deployment.yaml
+++ b/apps/system-tools/litellm/overlays/homelab/patch-deployment.yaml
@@ -5,13 +5,11 @@ metadata:
 spec:
   template:
     spec:
-      # Keep it flexible; you can pin to a node later if you want
       containers:
         - name: litellm
           env:
-            # Default safety: limit max tokens unless overridden by client.
-            - name: LITELLM_DEFAULT_MAX_TOKENS
-              value: "512"
-            # Prevent runaway costs on fallback provider
-            - name: LITELLM_DEFAULT_TIMEOUT
-              value: "30"
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: litellm-postgres
+                  key: DATABASE_URL
