--- a/apps/system-tools/open-webui/base/deployment.yaml
+++ b/apps/system-tools/open-webui/base/deployment.yaml
@@ -25,6 +25,8 @@ spec:
           env:
             - name: OLLAMA_API_BASE_URL
               value: "http://ollama.ollama.svc.cluster.local:11434"
+            - name: OPENAI_API_BASE_URLS
+              value: "http://ollama.ollama.svc.cluster.local:11434/v1"
             - name: WEBUI_AUTH
               value: "False"  # Set to True to enable auth
           resources:
