--- a/apps/ingress-external/base/openclaw.yaml
+++ b/apps/ingress-external/base/openclaw.yaml
@@ -1,15 +1,26 @@
 apiVersion: v1
+kind: Endpoints
+metadata:
+  name: openclaw-external
+  namespace: default
+subsets:
+  - addresses:
+      - ip: 10.10.30.104
+    ports:
+      - port: 18789
+        protocol: TCP
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: openclaw-external
   namespace: default
 spec:
-  type: ExternalName
-  externalName: 10.10.30.104
   ports:
     - port: 18789
       targetPort: 18789
       protocol: TCP
+  type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
