--- a/apps/ingress-external/base/proxmox.yaml
+++ b/apps/ingress-external/base/proxmox.yaml
@@ -1,15 +1,26 @@
 apiVersion: v1
+kind: Endpoints
+metadata:
+  name: proxmox-external
+  namespace: default
+subsets:
+  - addresses:
+      - ip: 10.10.10.11
+    ports:
+      - port: 8006
+        protocol: TCP
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: proxmox-external
   namespace: default
 spec:
-  type: ExternalName
-  externalName: 10.10.10.11
   ports:
     - port: 8006
       targetPort: 8006
       protocol: TCP
+  type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
