Remove GLPI+n8n; migrate PVCs from longhorn to ceph storageclasses

--- a/apps/home-automation/esphome/base/pvc.yaml
+++ b/apps/home-automation/esphome/base/pvc.yaml
@@ -7,7 +7,7 @@ metadata:
     app: esphome
 spec:
   accessModes: [ ReadWriteOnce ]
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
   resources:
     requests:
       storage: 10Gi
