--- a/apps/home-automation/frigate/base/pvcs.yaml
+++ b/apps/home-automation/frigate/base/pvcs.yaml
@@ -7,7 +7,7 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -18,7 +18,7 @@ spec:
   resources:
     requests:
       storage: 2Gi
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -29,4 +29,4 @@ spec:
   resources:
     requests:
       storage: 60Gi
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
