--- a/apps/home-automation/homeassistant/base/pvc-config.yaml
+++ b/apps/home-automation/homeassistant/base/pvc-config.yaml
@@ -7,7 +7,7 @@ metadata:
     app: homeassistant
 spec:
   accessModes: [ ReadWriteOnce ]
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
   resources:
     requests:
       storage: 50Gi
