--- a/apps/home-automation/influx/base/pvc.yaml
+++ b/apps/home-automation/influx/base/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: influxdb-data
 spec:
   accessModes: [ ReadWriteOnce ]
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
   resources:
     requests:
       storage: 20Gi
