--- a/apps/home-automation/nodered/base/pvc.yaml
+++ b/apps/home-automation/nodered/base/pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
   resources:
     requests:
       storage: 5Gi
