--- a/apps/support/rustdesk-server/base/pvc.yaml
+++ b/apps/support/rustdesk-server/base/pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: rustdesk-data
 spec:
   accessModes: ["ReadWriteOnce"]
-  storageClassName: longhorn
+  storageClassName: ceph-rbd
   resources:
     requests:
       storage: 1Gi
