--- a/apps/support/wordpress-redis/base/redis-statefulset.yaml
+++ b/apps/support/wordpress-redis/base/redis-statefulset.yaml
@@ -71,7 +71,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: longhorn
+        storageClassName: ceph-rbd
         resources:
           requests:
             storage: 2Gi
