--- a/apps/support/wordpress/base/mariadb-statefulset.yaml
+++ b/apps/support/wordpress/base/mariadb-statefulset.yaml
@@ -69,7 +69,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: longhorn
+        storageClassName: ceph-rbd
         resources:
           requests:
             storage: 10Gi
