--- a/apps/support/wordpress/base/wordpress-deployment.yaml
+++ b/apps/support/wordpress/base/wordpress-deployment.yaml
@@ -105,7 +105,7 @@ metadata:
   namespace: wordpress
 spec:
   accessModes: ["ReadWriteMany"]
-  storageClassName: longhorn
+  storageClassName: cephfs-fuse
   resources:
     requests:
       storage: 5Gi
