Update PVC configuration for homeassistant to use ceph storage and adjust storage size

--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -59,7 +59,7 @@ spec:
         #    type: CharDevice
         - name: homeassistant-config
           persistentVolumeClaim:
-            claimName: ha-config-restore-old
+            claimName: homeassistant-config-ceph
         - name: homeassistant-media
           persistentVolumeClaim:
             claimName: homeassistant-claim1
